--- a/index.html
+++ b/index.html
@@ -10,9 +10,47 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="styles.css" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script defer src="project.js"></script>
   </head>
-  <body>
-    <main></main>
+  <body class="body-class">
+    <main>
+      <div>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarToggler"
+            aria-controls="navbarToggler"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarToggler">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+              <li class="nav-item active">
+                <a class="nav-link" href="#"><h4>Placeholder#1</h4></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"><h4>Placeholder#2</h4></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"><h4>Placeholder#3</h4></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"><h4>Placeholder#4</h4></a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </main>
   </body>
 </html>
