Color design, specificity override for bootstrap dark, and hamburger update
Settled on a permanent color scheme and determined how to override the default bootstrap nav-dark colors. Also determined how to adjust the hamburger values/picture and settled on a distinct border color.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="styles.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
       integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
@@ -17,11 +16,12 @@
     ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script defer src="project.js"></script>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body class="body-class">
     <main>
       <div>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
           <button
             class="navbar-toggler"
             type="button"
