Added about me and fixed navbar to top
Created the about me columns container both a picture and a short description that adjust to screen size. Also linked to the href about and fixed the navbar so that it stays visible at the top of the screen continuously.

--- a/index.html
+++ b/index.html
@@ -36,21 +36,51 @@
           <div class="collapse navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
               <li class="nav-item active">
-                <a class="nav-link" href="#"><h4>Placeholder#1</h4></a>
+                <a class="nav-link" href="#about-me"><h4>About</h4></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><h4>Placeholder#2</h4></a>
+                <a class="nav-link" href="#"><h4>Projects</h4></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><h4>Placeholder#3</h4></a>
+                <a class="nav-link" href="#"><h4>Resume</h4></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><h4>Placeholder#4</h4></a>
+                <a class="nav-link" href="#"><h4>Contact</h4></a>
               </li>
             </ul>
           </div>
         </nav>
       </div>
+      <div class = "mx-5 my-5 px-4 py-4">
+        <div id = "about-me">
+            <div class = "row mt-5">
+                <h1 class="text-custom text-center">Forest LaShomb Pearson</h1>
+            </div>
+            <div class = "row">
+                <div class = "col-md-6 photo-container">
+                    <img id = "profile" src="/images/Pearson_Forest_pic1.jpg" 
+                        alt="Forest pearson"
+                        width="418"
+                        height="627"
+                        class="align-self-center photo">
+                </div>
+                <div class="col-xl-6" id="section1-div">
+                  <p class="mt-4 ps-4 pe-4 text-content">
+                    Hello, I'm Forest Pearson and I'm a current graduate student here at PSU with
+                    a focus on Artificial Intelligence and Machine Learning. My focus as of late
+                    has been Natural language processing using Python and C++, where I've learned
+                    to create GRUs to generate text in the same manner of an authors corpora,
+                    as well as other summarization tasks. I've also worked in capstone to create
+                    a web based OpenGL prosthetic modeling software for Gaffney Orthotics,
+                    where I worked in the backend using Emscripten to develop in C++.
+                    Here at PSU I work in the computer action team as the directors assistant to work with
+                    staff and faculty to address technical issues related to VPN,VNC,RDP,SSH, and Linux/Unix
+                    systems while maintaining documentation. I've greatly enjoyed all my work here at PSU and
+                    would love the opportunity to further my knowledge of Machine learning throughout my professional career.
+                  </p>
+                </div>
+            </div>
+        </div>
     </main>
   </body>
 </html>
