--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body class="body-class">
     <main>
-      <div>
+      <div class="sticky-top">
         <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
           <button
             class="navbar-toggler"
@@ -39,10 +39,10 @@
                 <a class="nav-link" href="#about-me"><h4>About</h4></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><h4>Projects</h4></a>
+                <a class="nav-link" href="#projects"><h4>Projects</h4></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><h4>Resume</h4></a>
+                <a class="nav-link" href="#resume"><h4>Resume</h4></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#"><h4>Contact</h4></a>
@@ -81,6 +81,94 @@
                 </div>
             </div>
         </div>
+        <div id = "projects" class = "mt-5">
+          <div class="text-center mb-5 text-custom" style="font-weight: bold;font-size: 3rem"> PROJECTS</div>
+          <div class = "row  row-cols-1 row-cols-lg-3 align-items-stretch g-5">
+              <div class="col">
+                  <a href = "https://github.com/ForestPearson/CS410-510-NLP-project" style="text-decoration: none;">
+                  <div class="card h-75">
+                      <img class="card-img-top h-75" src="/gifs/nlp.gif" alt="NLP Example">
+                      <div class="card-body">
+                      <h4 class="card-title">Shakespearean Text Generation Example</h4>
+                      </div>
+                  </div></a>
+                  <p class = "text-custom text-center">A Project in which a GRU text generation model was created and used to generate Shakespearean Script in the same format as the authors corpora that was then peer evaluated while being compared to other generation models.</p>
+              </div>
+              <div class="col">
+                <a href = "https://github.com/shatabdi-pal/NLP-Final-Project" style="text-decoration: none;">
+                <div class="card h-75">
+                    <img class="card-img-top h-75" src="/images/SNaC.png" alt="NLP Metric">
+                    <div class="card-body">
+                    <h4 class="card-title">Generated Summarization Metric Implementation</h4>
+                    </div>
+                </div></a>
+                <p class = "text-custom text-center">A Project in which a research paper based on evaluation NLP generated summaries by using a coherence evaluation framework is implemented and tested on popular web summarizers such as GPT.</p>
+            </div>
+            <div class="col">
+              <a href = "https://github.com/ForestPearson/CS445-545-ML-Project" style="text-decoration: none;">
+              <div class="card h-75">
+                  <img class="card-img-top h-75" src="/images/cifar.png" alt="CIFAR-10 Table">
+                  <div class="card-body">
+                  <h4 class="card-title">CIFAR-10 Image Classification</h4>
+                  </div>
+              </div></a>
+              <p class = "text-custom text-center">A Project in which .</p>
+          </div>
+          </div>
+      </div>
+        <div id = "resume" class = "mt-5 text-center">
+          <div class="mb-5 text-custom  text-center" style="font-weight: bold;font-size: 3rem"> Resume</div>
+          <div class = "row row-cols-1 row-cols-lg-2 align-items-stretch g-5">
+              <div class = "col text-custom justify-content-left">
+                  <h2 class = "text-center">Education</h2>
+                  <ul class = "work-projects">
+                      <li>
+                          <h3>Portland State University</h3>
+                          <p>
+                              <i>Expected 2023</i><br>
+                              <b>Level: </b><span>Masters In Computer Science</span><br>
+                              <b>Major: </b><span>Computer Science</span>
+                          </p>
+                      </li>
+                      <li>
+                          <h3>Portland State University</h3>
+                          <p>
+                              <i>2019 - 2021</i><br>
+                              <b>Level: </b><span>Bachelors In Computer Science</span><br>
+                              <b>Major: </b><span>Computer Science</span><br>
+                              <b>Honors:</b><span>Graduated Cum Laude</span>
+                          </p>
+                      </li>
+                  </ul>
+              </div>
+              <div class = "col  text-custom">
+                  <h2 class = "text-center">Experience</h2>
+                  <ul class = "work-projects">
+                      <li>
+                          <h3>Computer Action Team</h3>
+                          <p>
+                              <i>2020 - Present</i><br>
+                              <b>Title: </b><span>Assistant To Director of IT</span><br>
+                              <b>location:</b><span>Portland, OR</span><br>
+                              <b>Description: </b><span>Works as the directors assistant to document computer replacement
+                                purchases for the college, vetted and documented Purchases, specs,
+                                funding types, index usage and followup communication.</span><br/>
+                          </p>
+                      </li>
+                      <li>
+                          <h3>Gaffney Orthotics</h3>
+                          <p>
+                              <i>2021 - Capstone </i><br/>
+                              <b>Title: </b><span>Backend Developer</span><br>
+                              <b>location:</b><span>Portland, OR</span><br>
+                              <b>Description: </b><span>Worked with a team to develop a web based OpenGL prosthetic modeling software for a client.</span><br>
+
+                          </p>
+                      </li>
+                  </ul>
+          </div>
+      </div>
+      </div>
     </main>
   </body>
 </html>
