--- a/index.html
+++ b/index.html
@@ -51,123 +51,190 @@
           </div>
         </nav>
       </div>
-      <div class = "mx-5 my-5 px-4 py-4">
-        <div id = "about-me">
-            <div class = "row mt-5">
-                <h1 class="text-custom text-center">Forest LaShomb Pearson</h1>
+      <div class="mx-5 my-5 px-4 py-4">
+        <div id="about-me">
+          <div class="row mt-5">
+            <h1 class="text-custom text-center">Forest LaShomb Pearson</h1>
+          </div>
+          <div class="row">
+            <div class="col-md-6 photo-container">
+              <img
+                id="profile"
+                src="/images/Pearson_Forest_pic1.jpg"
+                alt="Forest pearson"
+                width="418"
+                height="627"
+                class="align-self-center photo"
+              />
             </div>
-            <div class = "row">
-                <div class = "col-md-6 photo-container">
-                    <img id = "profile" src="/images/Pearson_Forest_pic1.jpg" 
-                        alt="Forest pearson"
-                        width="418"
-                        height="627"
-                        class="align-self-center photo">
-                </div>
-                <div class="col-xl-6" id="section1-div">
-                  <p class="mt-4 ps-4 pe-4 text-content">
-                    Hello, I'm Forest Pearson and I'm a current graduate student here at PSU with
-                    a focus on Artificial Intelligence and Machine Learning. My focus as of late
-                    has been Natural language processing using Python and C++, where I've learned
-                    to create GRUs to generate text in the same manner of an authors corpora,
-                    as well as other summarization tasks. I've also worked in capstone to create
-                    a web based OpenGL prosthetic modeling software for Gaffney Orthotics,
-                    where I worked in the backend using Emscripten to develop in C++.
-                    Here at PSU I work in the computer action team as the directors assistant to work with
-                    staff and faculty to address technical issues related to VPN,VNC,RDP,SSH, and Linux/Unix
-                    systems while maintaining documentation. I've greatly enjoyed all my work here at PSU and
-                    would love the opportunity to further my knowledge of Machine learning throughout my professional career.
-                  </p>
-                </div>
+            <div class="col-xl-6" id="section1-div">
+              <p class="mt-4 ps-4 pe-4 text-content">
+                Hello, I'm Forest Pearson and I'm a current graduate student
+                here at PSU with a focus on Artificial Intelligence and Machine
+                Learning. My focus as of late has been Natural language
+                processing using Python and C++, where I've learned to create
+                GRUs to generate text in the same manner of an authors corpora,
+                as well as other summarization tasks. I've also worked in
+                capstone to create a web based OpenGL prosthetic modeling
+                software for Gaffney Orthotics, where I worked in the backend
+                using Emscripten to develop in C++. Here at PSU I work in the
+                computer action team as the directors assistant to work with
+                staff and faculty to address technical issues related to
+                VPN,VNC,RDP,SSH, and Linux/Unix systems while maintaining
+                documentation. I've greatly enjoyed all my work here at PSU and
+                would love the opportunity to further my knowledge of Machine
+                learning throughout my professional career.
+              </p>
             </div>
+          </div>
         </div>
-        <div id = "projects" class = "mt-5">
-          <div class="text-center mb-5 text-custom" style="font-weight: bold;font-size: 3rem"> PROJECTS</div>
-          <div class = "row  row-cols-1 row-cols-lg-3 align-items-stretch g-5">
-              <div class="col">
-                  <a href = "https://github.com/ForestPearson/CS410-510-NLP-project" style="text-decoration: none;">
-                  <div class="card h-75">
-                      <img class="card-img-top h-75" src="/gifs/nlp.gif" alt="NLP Example">
-                      <div class="card-body">
-                      <h4 class="card-title">Shakespearean Text Generation Example</h4>
-                      </div>
-                  </div></a>
-                  <p class = "text-custom text-center">A Project in which a GRU text generation model was created and used to generate Shakespearean Script in the same format as the authors corpora that was then peer evaluated while being compared to other generation models.</p>
-              </div>
-              <div class="col">
-                <a href = "https://github.com/shatabdi-pal/NLP-Final-Project" style="text-decoration: none;">
+        <div id="projects" class="mt-5">
+          <div
+            class="text-center mb-5 text-custom"
+            style="font-weight: bold; font-size: 3rem"
+          >
+            PROJECTS
+          </div>
+          <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-5">
+            <div class="col">
+              <a
+                href="https://github.com/ForestPearson/CS410-510-NLP-project"
+                style="text-decoration: none"
+              >
                 <div class="card h-75">
-                    <img class="card-img-top h-75" src="/images/SNaC.png" alt="NLP Metric">
-                    <div class="card-body">
-                    <h4 class="card-title">Generated Summarization Metric Implementation</h4>
-                    </div>
-                </div></a>
-                <p class = "text-custom text-center">A Project in which a research paper based on evaluation NLP generated summaries by using a coherence evaluation framework is implemented and tested on popular web summarizers such as GPT.</p>
+                  <img
+                    class="card-img-top h-75"
+                    src="/gifs/nlp.gif"
+                    alt="NLP Example"
+                  />
+                  <div class="card-body">
+                    <h4 class="card-title">
+                      Shakespearean Text Generation Example
+                    </h4>
+                  </div>
+                </div></a
+              >
+              <p class="text-custom text-center">
+                A Project in which a GRU text generation model was created and
+                used to generate Shakespearean Script in the same format as the
+                authors corpora that was then peer evaluated while being
+                compared to other generation models.
+              </p>
             </div>
             <div class="col">
-              <a href = "https://github.com/ForestPearson/CS445-545-ML-Project" style="text-decoration: none;">
-              <div class="card h-75">
-                  <img class="card-img-top h-75" src="/images/cifar.png" alt="CIFAR-10 Table">
+              <a
+                href="https://github.com/shatabdi-pal/NLP-Final-Project"
+                style="text-decoration: none"
+              >
+                <div class="card h-75">
+                  <img
+                    class="card-img-top h-75"
+                    src="/images/SNaC.png"
+                    alt="NLP Metric"
+                  />
                   <div class="card-body">
-                  <h4 class="card-title">CIFAR-10 Image Classification</h4>
+                    <h4 class="card-title">
+                      Generated Summarization Metric Implementation
+                    </h4>
                   </div>
-              </div></a>
-              <p class = "text-custom text-center">A Project in which .</p>
+                </div></a
+              >
+              <p class="text-custom text-center">
+                A Project in which a research paper based on evaluation NLP
+                generated summaries by using a coherence evaluation framework is
+                implemented and tested on popular web summarizers such as GPT.
+              </p>
+            </div>
+            <div class="col">
+              <a
+                href="https://github.com/ForestPearson/CS445-545-ML-Project"
+                style="text-decoration: none"
+              >
+                <div class="card h-75">
+                  <img
+                    class="card-img-top h-75"
+                    src="/images/cifar.png"
+                    alt="CIFAR-10 Table"
+                  />
+                  <div class="card-body">
+                    <h4 class="card-title">CIFAR-10 Image Classification</h4>
+                  </div>
+                </div></a
+              >
+              <p class="text-custom text-center">
+                A Project in which a Multi-layer neural network along with a
+                Convulted Neural Netowrk were implemented, trained, and
+                compared, on the CIFAR-10 image classification network.
+              </p>
+            </div>
           </div>
+        </div>
+        <div id="resume" class="mt-5 text-center">
+          <div
+            class="mb-5 text-custom text-center"
+            style="font-weight: bold; font-size: 3rem"
+          >
+            Resume
           </div>
-      </div>
-        <div id = "resume" class = "mt-5 text-center">
-          <div class="mb-5 text-custom  text-center" style="font-weight: bold;font-size: 3rem"> Resume</div>
-          <div class = "row row-cols-1 row-cols-lg-2 align-items-stretch g-5">
-              <div class = "col text-custom justify-content-left">
-                  <h2 class = "text-center">Education</h2>
-                  <ul class = "work-projects">
-                      <li>
-                          <h3>Portland State University</h3>
-                          <p>
-                              <i>Expected 2023</i><br>
-                              <b>Level: </b><span>Masters In Computer Science</span><br>
-                              <b>Major: </b><span>Computer Science</span>
-                          </p>
-                      </li>
-                      <li>
-                          <h3>Portland State University</h3>
-                          <p>
-                              <i>2019 - 2021</i><br>
-                              <b>Level: </b><span>Bachelors In Computer Science</span><br>
-                              <b>Major: </b><span>Computer Science</span><br>
-                              <b>Honors:</b><span>Graduated Cum Laude</span>
-                          </p>
-                      </li>
-                  </ul>
-              </div>
-              <div class = "col  text-custom">
-                  <h2 class = "text-center">Experience</h2>
-                  <ul class = "work-projects">
-                      <li>
-                          <h3>Computer Action Team</h3>
-                          <p>
-                              <i>2020 - Present</i><br>
-                              <b>Title: </b><span>Assistant To Director of IT</span><br>
-                              <b>location:</b><span>Portland, OR</span><br>
-                              <b>Description: </b><span>Works as the directors assistant to document computer replacement
-                                purchases for the college, vetted and documented Purchases, specs,
-                                funding types, index usage and followup communication.</span><br/>
-                          </p>
-                      </li>
-                      <li>
-                          <h3>Gaffney Orthotics</h3>
-                          <p>
-                              <i>2021 - Capstone </i><br/>
-                              <b>Title: </b><span>Backend Developer</span><br>
-                              <b>location:</b><span>Portland, OR</span><br>
-                              <b>Description: </b><span>Worked with a team to develop a web based OpenGL prosthetic modeling software for a client.</span><br>
-
-                          </p>
-                      </li>
-                  </ul>
+          <div class="row row-cols-1 row-cols-lg-2 align-items-stretch g-5">
+            <div class="col text-custom justify-content-left">
+              <h2 class="text-center">Education</h2>
+              <ul class="work-projects">
+                <li>
+                  <h3>Portland State University</h3>
+                  <p>
+                    <i>Expected 2023</i><br />
+                    <b>Level: </b><span>Masters In Computer Science</span><br />
+                    <b>Major: </b><span>Computer Science</span>
+                  </p>
+                </li>
+                <li>
+                  <h3>Portland State University</h3>
+                  <p>
+                    <i>2019 - 2021</i><br />
+                    <b>Level: </b><span>Bachelors In Computer Science</span
+                    ><br />
+                    <b>Major: </b><span>Computer Science</span><br />
+                    <b>Honors:</b><span>Graduated Cum Laude</span>
+                  </p>
+                </li>
+              </ul>
+            </div>
+            <div class="col text-custom">
+              <h2 class="text-center">Experience</h2>
+              <ul class="work-projects">
+                <li>
+                  <h3>Computer Action Team</h3>
+                  <p>
+                    <i>2020 - Present</i><br />
+                    <b>Title: </b><span>Assistant To Director of IT</span><br />
+                    <b>location:</b><span>Portland, OR</span><br />
+                    <b>Description: </b
+                    ><span
+                      >Works as the directors assistant to document computer
+                      replacement purchases for the college, vetted and
+                      documented Purchases, specs, funding types, index usage
+                      and followup communication.</span
+                    ><br />
+                  </p>
+                </li>
+                <li>
+                  <h3>Gaffney Orthotics</h3>
+                  <p>
+                    <i>2021 - Capstone </i><br />
+                    <b>Title: </b><span>Backend Developer</span><br />
+                    <b>location:</b><span>Portland, OR</span><br />
+                    <b>Description: </b
+                    ><span
+                      >Worked with a team to develop a web based OpenGL
+                      prosthetic modeling software for a client.</span
+                    ><br />
+                  </p>
+                </li>
+              </ul>
+            </div>
           </div>
-      </div>
+        </div>
       </div>
     </main>
   </body>
