--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script defer src="project.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body class="body-class">
@@ -234,6 +238,77 @@
               </ul>
             </div>
           </div>
+        </div>
+        <div class="row form-container">
+          <form>
+            <h2 id="section4-header">Contact Form</h2>
+            <div class="mb-3">
+              <label for="name" class="form-label">Name:</label>
+              <input
+                type="text"
+                class="form-control"
+                id="name"
+                name="name"
+                placeholder="Enter your name"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Email:</label>
+              <input
+                type="email"
+                class="form-control"
+                id="email"
+                name="email"
+                placeholder="Enter your email"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="phone" class="form-label">Phone:</label>
+              <input
+                type="tel"
+                class="form-control"
+                id="phone"
+                name="phone"
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+                placeholder="### ### ####"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="message" class="form-label">Message:</label>
+              <textarea
+                class="form-control"
+                id="message"
+                rows="4"
+                name="message"
+                placeholder="Message"
+              ></textarea>
+            </div>
+            <button
+              type="submit"
+              class="btn btn-light btn-lg"
+              id="submit"
+              value="submit"
+            >
+              Submit
+            </button>
+          </form>
+        </div>
+        <div class="text-custom text-center" style="font-size: 18px">
+          <b>Also contact me on:</b>
+        </div>
+        <div class="d-flex flex-row justify-content-center">
+          <a
+            class="p-4 text-custom media-connect"
+            title="LinkedIn"
+            href="https://www.linkedin.com/in/forest-pearson/"
+            ><i class="bi bi-linkedin icon"></i
+          ></a>
+          <a
+            class="p-4 text-custom media-connect"
+            title="Github"
+            href="https://github.com/ForestPearson"
+            ><i class="bi bi-github icon"></i
+          ></a>
         </div>
       </div>
     </main>
