Fixed photo responsiveness, Design update, reset form, nav hover
Fixed an issue where the photo class would not stay centered at certain screen sizes. Updated the design on text to make the format more pleasing. Added a reset button to the form. Added a nav hover element for vissibility.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <a class="nav-link" href="#resume"><h4>Resume</h4></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><h4>Contact</h4></a>
+                <a class="nav-link" href="#contact"><h4>Contact</h4></a>
               </li>
             </ul>
           </div>
@@ -75,14 +75,15 @@
               <p class="mt-4 ps-4 pe-4 text-content">
                 Hello, I'm Forest Pearson and I'm a current graduate student
                 here at PSU with a focus on Artificial Intelligence and Machine
-                Learning. My focus as of late has been Natural language
-                processing using Python and C++, where I've learned to create
-                GRUs to generate text in the same manner of an authors corpora,
-                as well as other summarization tasks. I've also worked in
-                capstone to create a web based OpenGL prosthetic modeling
-                software for Gaffney Orthotics, where I worked in the backend
-                using Emscripten to develop in C++. Here at PSU I work in the
-                computer action team as the directors assistant to work with
+                Learning.<br /><br />
+                My interest as of late has been Natural language processing
+                using Python and C++, where I've learned to create GRUs to
+                generate text in the same manner of an authors corpora, as well
+                as other summarization tasks. I've also worked in capstone to
+                create a web based OpenGL prosthetic modeling software for
+                Gaffney Orthotics, where I worked in the backend using
+                Emscripten to develop in C++. <br /><br />Here at PSU I work in
+                the computer action team as the directors assistant to work with
                 staff and faculty to address technical issues related to
                 VPN,VNC,RDP,SSH, and Linux/Unix systems while maintaining
                 documentation. I've greatly enjoyed all my work here at PSU and
@@ -173,15 +174,15 @@
             </div>
           </div>
         </div>
-        <div id="resume" class="mt-5 text-center">
+        <div id="resume" class="mt-5 text-center resume">
           <div
-            class="mb-5 text-custom text-center"
+            class="mb-2 text-resume text-center"
             style="font-weight: bold; font-size: 3rem"
           >
             Resume
           </div>
           <div class="row row-cols-1 row-cols-lg-2 align-items-stretch g-5">
-            <div class="col text-custom justify-content-left">
+            <div class="col text-resume justify-content-left">
               <h2 class="text-center">Education</h2>
               <ul class="work-projects">
                 <li>
@@ -204,7 +205,7 @@
                 </li>
               </ul>
             </div>
-            <div class="col text-custom">
+            <div class="col text-resume">
               <h2 class="text-center">Experience</h2>
               <ul class="work-projects">
                 <li>
@@ -239,7 +240,7 @@
             </div>
           </div>
         </div>
-        <div class="row form-container">
+        <div id="contact" class="row form-container">
           <form>
             <h2 id="section4-header">Contact Form</h2>
             <div class="mb-3">
@@ -290,6 +291,14 @@
               value="submit"
             >
               Submit
+            </button>
+            <button
+              type="reset"
+              class="btn btn-light btn-lg"
+              id="reset"
+              value="reset"
+            >
+              Reset
             </button>
           </form>
         </div>
