--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="col-md-6 photo-container">
               <img
                 id="profile"
-                src="/images/Pearson_Forest_pic1.jpg"
+                src="images/Pearson_Forest_pic1.jpg"
                 alt="Forest pearson"
                 width="418"
                 height="627"
@@ -109,7 +109,7 @@
                 <div class="card h-75">
                   <img
                     class="card-img-top h-75"
-                    src="/gifs/nlp.gif"
+                    src="gifs/nlp.gif"
                     alt="NLP Example"
                   />
                   <div class="card-body">
@@ -134,7 +134,7 @@
                 <div class="card h-75">
                   <img
                     class="card-img-top h-75"
-                    src="/images/SNaC.png"
+                    src="images/SNaC.png"
                     alt="NLP Metric"
                   />
                   <div class="card-body">
@@ -158,7 +158,7 @@
                 <div class="card h-75">
                   <img
                     class="card-img-top h-75"
-                    src="/images/cifar.png"
+                    src="images/cifar.png"
                     alt="CIFAR-10 Table"
                   />
                   <div class="card-body">
