--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
+    ></script>
     <script defer src="project.js"></script>
     <link
       rel="stylesheet"
@@ -241,7 +245,7 @@
           </div>
         </div>
         <div id="contact" class="row form-container">
-          <form>
+          <form id="contact-form">
             <h2 id="section4-header">Contact Form</h2>
             <div class="mb-3">
               <label for="name" class="form-label">Name:</label>
@@ -271,7 +275,7 @@
                 id="phone"
                 name="phone"
                 pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
-                placeholder="### ### ####"
+                placeholder="###-###-####"
               />
             </div>
             <div class="mb-3">
